# ftm-assets

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: docker.yml  python.yml
docs/: usage.md
docs/reference/: cli.md  resolve.md  settings.md
ftm_assets/: api.py  cli.py  logic.py  model.py  repository.py  settings.py  store.py  tasks.py
ftm_assets/resolvers/: wikidata.py
js/: component.tsx  index.ts  types.ts
tests/: conftest.py  test_api.py  test_cli.py  test_resolve.py
tests/fixtures/: entities.ftm.json  ids.txt
